# Ark-Facture

./: CHANGELOG.md  Cargo.toml  FINAL_SUMMARY.md  README.md  build.bat  build.sh  index.html  server.py
assets/: factura.html
examples/: .env.example  angular.component.ts  express.js  index.html  laravel.blade.php  nextjs.tsx  pdf-example.js  react.jsx  security-test.js  vue.vue
pkg/: .npmignore  INTEGRATION.md  PDF_SECURITY.md  QUICK_START.md  README.md  facture_ark.d.ts  facture_ark.js  facture_ark_bg.js  facture_ark_bg.wasm  facture_ark_bg.wasm.d.ts  index.js  package.json  pdf-generator.js
src/: generators.rs  lib.rs  main.rs  models.rs  pdf_export.rs  security.rs  tests.rs  validators.rs  xml_export.rs
