[package]
name = "facture_ark"
version = "2.1.0"
edition = "2021"
authors = ["ARK DEV"]
description = "Sistema Enterprise de Comprobantes de Venta Internos - Bolivia"
license = "GPL-3.0-or-later"
keywords = ["factura", "comprobante", "bolivia", "sha256"]
categories = ["business", "finance"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "facture_ark_cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
qrcode = "0.12"
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
default = []
secure = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false