[package]
name = "facture_ark"
version = "4.0.0"
edition = "2021"
authors = ["ARK DEV"]
description = "Sistema Enterprise de generación de comprobantes de venta internos para Bolivia - Compilado a WebAssembly desde Rust con arquitectura Zero-Knowledge"
license = "GPL-3.0-or-later"
keywords = ["factura", "comprobante", "bolivia", "sha256", "wasm", "xml"]
categories = ["business", "finance", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "facture_ark_cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
qrcode = "0.12"
console_error_panic_hook = "0.1.7"
quick-xml = { version = "0.31", features = ["serialize"] }
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
base64 = "0.21"
rsa = { version = "0.9", optional = true }
ring = { version = "0.17", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement"] }

[features]
default = []
secure = ["rsa", "ring"]
full = ["secure"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false